Home page added.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,26 @@
-<p>
-  home-page works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="#">
+    <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain
+  </a>
+      <button class="btn btn-outline-info mr-sm-2">Help</button>
+</nav>
+
+<!-- Container for page -->
+<div class="container" >
+    <div class="card my-5 text-center">
+        <div class="card-body">
+          <h5 class="card-title mb-2 mt-5">All your vehicle registration needs in one place.</h5>
+          <p class="card-text mb-4">Register your vehicle, update registrations, check and manage the status of your vehicles and find all the information and the forms you need.</p>
+          <a href="#" class="btn btn-success btn-lg mb-5 mr-2"><i class="fas fa-user-plus mr-2"></i>Register</a>
+          <a href="#" class="btn btn-primary btn-lg mb-5"><i class="fas fa-sign-in-alt mr-2"></i>Login</a>
+
+          <div class="row justify-content-end">
+              <a class="col-lg-1 col-5" href="#"><small>Terms</small></a>
+              <small class="mx-1"> | </small>
+              <a class="col-lg-1 col-5" href="#"><small>Privacy</small></a>
+          </div>
+          
+        </div>
+      </div>
+</div>
