--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,3 +1,46 @@
-<p>
-  register-page works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <a routerLink="/" class="navbar-brand">
+    <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain
+  </a>
+  <button class="btn btn-outline-info mr-sm-2">Help</button>
+</nav>
+
+<!-- Container for page -->
+<div class="container">
+  <div class="card my-5 text-center">
+    <div class="card-body">
+      <h5 class="card-title mb-2 mt-5">Sign Up</h5>
+      
+      <!-- Form -->
+      <form class="w-50 mx-auto text-left">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+              <label for="exampleInputName1">Name</label>
+              <input type="text" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Enter full name">
+            </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control mb-3" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Re-enter Password">
+            </div>
+          <button routerLink="/" class="btn btn-primary">Submit</button>
+        </form>
+
+      <div class="row justify-content-end">
+        <a class="col-lg-1 col-5" href="#">
+          <small>Terms</small>
+        </a>
+        <small class="mx-1"> | </small>
+        <a class="col-lg-1 col-5" href="#">
+          <small>Privacy</small>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div>
