Manufacturer pages added.

--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -44,7 +44,7 @@
           <label for="exampleInputInsurance1">Insurance Transaction Number</label>
           <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle`s insurance number">
         </div>
-        <button routerLink="/" class="btn btn-primary">Submit</button>
+        <button routerLink="/car-owner" class="btn btn-primary">Submit</button>
       </form>
 
       <div class="row justify-content-end">
