--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -1,3 +1,62 @@
-<p>
-  car-owner-car-edit works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a routerLink="/" class="navbar-brand">
+      <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+    </a>
+    <div>
+        <span class="mr-3">Welcome James Miller!</span>
+        <button class="btn btn-outline-warning mr-sm-2">Sign Out</button>
+      </div>
+  </nav>
+  
+  <!-- Container for page -->
+  <div class="container">
+    <div class="card my-5 text-center">
+      <div class="card-body">
+        <h5 class="card-title mb-2 mt-5">Edit details about your vehicle</h5>
+  
+        <!-- Form -->
+  
+        <form class="w-75 mx-auto text-left">
+          <div class="form-group">
+            <label for="exampleInputVIN1">VIN</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" value="{{vehicleOwner}}">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputMake1">Make</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make" value="{{vehicleMake}}">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputModel1">Model</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model" value="{{vehicleModel}}">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputLicense1">License</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate" value="{{vehicleLicense}}">
+          </div>
+  
+          <div class="form-group">
+            <label for="exampleInputColour1">Colour</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour" value="{{vehicleColour}}">
+          </div>
+  
+          <div class="form-group">
+            <label for="exampleInputInsurance1">Insurance Transaction Number</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle`s insurance number" value="{{vehicleInsurance}}">
+          </div>
+          <button routerLink="/car-owner" class="btn btn-secondary">Submit changes for approval</button>
+        </form>
+  
+        <div class="row justify-content-end">
+          <a class="col-lg-1 col-5" href="#">
+            <small>Terms</small>
+          </a>
+          <small class="mx-1"> | </small>
+          <a class="col-lg-1 col-5" href="#">
+            <small>Privacy</small>
+          </a>
+        </div>
+  
+      </div>
+    </div>
+  </div>
