--- a/src/app/manufaturer-hub-car-info/manufaturer-hub-car-info.component.html
+++ b/src/app/manufaturer-hub-car-info/manufaturer-hub-car-info.component.html
@@ -1,3 +1,67 @@
-<p>
-  manufaturer-hub-car-info works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a routerLink="/manufacturer" class="navbar-brand">
+      <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+    </a>
+    <div>
+      <span class="mr-3">Welcome Manufacturer!</span>
+      <button routerLink="/" class="btn btn-outline-warning mr-sm-2">Sign Out</button>
+    </div>
+  </nav>
+  
+  <!-- Container for page -->
+  <div class="container">
+    <div class="card my-5">
+      <div class="card-body">
+        <h5 class="card-title my-2">View vehicle</h5>
+        <hr>
+  
+        <table class="table table-hover">
+          <thead class="thead-light">
+            <tr>
+              <th scope="col">Make
+              </th>
+              <th scope="col">Model
+              </th>
+              <th scope="col">Price
+              </th>
+              <th scope="col">Colour
+              </th>
+              <th scope="col">Seats
+                </th>
+              
+              <th scope="col">Weight
+              </th>
+              <th scope="col">Height
+              </th>
+              <th scope="col">Lenght
+              </th>
+              <th scope="col">Width
+              </th>
+  
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Chevy</td>
+              <td>Nova</td>
+              <td>$10,400</td>
+              <td>Blue</td>
+              <td>5</td>
+              <td>18kg</td>
+              <td>2m</td>
+              <td>8m</td>
+              <td>2.2m</td>
+            </tr>
+          </tbody>
+        </table>
+  
+        <div class="row justify-content-end">
+          <div class="col-2 mt-4">
+            <button routerLink="/manufacturer" class="btn btn-outline-info">Back to all vehicles</button>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  </div>
