--- a/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
+++ b/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
@@ -1,3 +1,76 @@
-<p>
-  manufaturer-hub-order-requests works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a routerLink="/manufacturer" class="navbar-brand">
+      <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+    </a>
+    <div>
+      <span class="mr-3">Welcome Manufacturer!</span>
+      <button routerLink="/" class="btn btn-outline-warning mr-sm-2">Sign Out</button>
+    </div>
+  </nav>
+
+<!-- Container for page -->
+<div class="container">
+  <div class="card my-5">
+    <div class="card-body">
+      <h5 class="card-title my-2">Order Requests</h5>
+      <hr>
+
+      <table class="table table-hover">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Model
+            </th>
+            <th scope="col">Client
+            </th>
+            <th scope="col">Colour
+            </th>
+            <th scope="col">Features
+            </th>
+            <th scope="col">View Details</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Chevy Nova</td>
+            <td>Jenn Brown</td>
+            <td>Blue</td>
+            <td>N/A</td>
+            <td>
+              <button routerLink="/manufacturer/new-car" type="button" class="btn btn-link">Create</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Honda Accord</td>
+            <td>Eddie Fox</td>
+            <td>Black</td>
+            <td>Four Wheel Drive</td>
+            <td>
+              <button routerLink="/manufacturer/new-car" type="button" class="btn btn-link">Create</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Honda Odyssey</td>
+            <td>Jeremy Collins</td>
+            <td>Gray</td>
+            <td>Add built-in GPS</td>
+            <td>
+              <button routerLink="/manufacturer/new-car" type="button" class="btn btn-link">Create</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="row justify-content-end">
+        <div class="col-1 mt-4">
+          <button routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
