minor changes & fixes

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -21,13 +21,13 @@
           <label for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <select class="form-control form-control-lg mb-3 mt-4">
+        <select class="form-control form-control-lg mb-3 mt-4" >
             <option>Car owner</option>
             <option>Insurance Agent</option>
             <option>Manufacturer</option>
             <option>Police Officer</option>
           </select>
-        <button routerLink="/" class="btn btn-primary">Sign In</button>
+        <button routerLink="/manufacturer" class="btn btn-primary">Sign In</button>
       </form>
 
       <div class="row justify-content-end">
