--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -13,8 +13,11 @@
 <div class="container">
   <div class="card my-5 text-center">
     <div class="card-body">
+      
       <h5 class="card-title mb-2 mt-5">Register a New Vehicle</h5>
 
+
+      
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
         <div class="form-group">
@@ -64,6 +67,8 @@
         <button routerLink="/manufacturer" class="btn btn-primary mt-4" (click)="addCar(vehicle)">Submit</button>
       </form>
 
+      
+
       <div class="row justify-content-end">
         <a class="col-lg-1 col-5" href="#">
           <small>Terms</small>
@@ -72,6 +77,12 @@
         <a class="col-lg-1 col-5" href="#">
           <small>Privacy</small>
         </a>
+      </div>
+
+      <!-- Gross positioning temporary button -->
+      <div class="row justify-content-end">
+          <div class="col-1 mt-4">
+            <button routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
       </div>
 
     </div>
