--- a/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
+++ b/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
@@ -19,7 +19,7 @@
         <table class="table table-hover">
           <thead class="thead-light">
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">VIN</th>
               <th scope="col">Model
               </th>
               <th scope="col">License
