--- a/src/app/manufaturer-hub/manufaturer-hub.component.html
+++ b/src/app/manufaturer-hub/manufaturer-hub.component.html
@@ -16,12 +16,12 @@
       <h5 class="card-title my-5">Manufacturer options:</h5>
       <div class="row justify-content-center mb-5">
         <div class="col-lg-3 col-12 text-center">
-          <button routerLink="/manufacturer/new-car" class="btn btn-outline-success btn-block" style="height: 80px;">New vehicle request
+          <button routerLink="/manufacturer/new-car" class="btn btn-outline-success btn-block" style="height: 80px;">New Vehicle Request
             <i class="fas fa-plus-square ml-1"></i>
           </button>
         </div>
         <div class="col-lg-3 col-12 text-center">
-          <button routerLink="/manufacturer/order-request" class="btn btn-outline-primary btn-block" style="height: 80px;">Order requests
+          <button routerLink="/manufacturer/order-request" class="btn btn-outline-primary btn-block" style="height: 80px;">Order Requests
             <i class="fas fa-cart-arrow-down ml-1"></i>
           </button>
         </div>
@@ -31,7 +31,7 @@
           </button>
         </div>
         <div class="col-lg-3 col-12 text-center">
-          <button routerLink="/manufacturer/sell-car" class="btn btn-outline-info btn-block" style="height: 80px;">Sell vehicle
+          <button routerLink="/manufacturer/sell-car" class="btn btn-outline-info btn-block" style="height: 80px;">Sell Vehicle
             <i class="fas fa-user-tag ml-1"></i>
           </button>
         </div>
