--- a/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.html
+++ b/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-2">Stock</h5>
+      <h5 class="card-title my-2">All Registered Vehicles</h5>
       <hr>
 
       <table class="table table-hover">
