--- a/src/app/police-hub/police-hub.component.html
+++ b/src/app/police-hub/police-hub.component.html
@@ -13,16 +13,16 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-5">Police Officer options:</h5>
+      <h5 class="card-title my-5">Police Officer Options:</h5>
       <div class="row justify-content-center mb-4">
         <div class="col-lg-4 col-12 text-center">
-          <button routerLink="/police/police-view" class="btn btn-outline-success btn-block" style="height: 80px;">View all registered vehicles <i class="fas fa-car ml-1"></i></button>
+          <button routerLink="/police/police-view" class="btn btn-outline-success btn-block" style="height: 80px;">View All Registered Vehicles <i class="fas fa-car ml-1"></i></button>
         </div>
         <div class="col-lg-4 col-12 text-center">
-          <button class="btn btn-outline-primary btn-block" style="height: 80px;">Report a vehicle as stolen or suspicious <i class="fas fa-key ml-1"></i></button>
+          <button routerLink="/police/police-report" class="btn btn-outline-primary btn-block" style="height: 80px;">Report a Vehicle as Stolen or Suspicious <i class="fas fa-key ml-1"></i></button>
         </div>
         <div class="col-lg-4 col-12 text-center">
-          <button routerLink="/police/police-impound" class="btn btn-outline-secondary btn-block" style="height: 80px;">Report impounded car <i class="fas fa-truck-loading ml-1"></i></button>
+          <button routerLink="/police/police-impound" class="btn btn-outline-secondary btn-block" style="height: 80px;">Report Impounded Car <i class="fas fa-truck-loading ml-1"></i></button>
         </div>
       </div>
 
