--- a/src/app/car-owner-hub/car-owner-hub.component.html
+++ b/src/app/car-owner-hub/car-owner-hub.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-2">Your vehicles</h5>
+      <h5 class="card-title my-2">Your Vehicles</h5>
       <hr>
 
       <table class="table table-hover">
