--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -14,7 +14,7 @@
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+          <label for="exampleInputEmail1">Email Address</label>
           <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group">
@@ -22,7 +22,7 @@
           <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
         </div>
         <select class="form-control form-control-lg mb-3 mt-4"  >
-            <option>Car owner</option>
+            <option>Car Owner</option>
             <option>Insurance Agent</option>
             <option>Manufacturer</option>
             <option>Police Officer</option>
