--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -5,7 +5,7 @@
     </a>
     <div>
         <span class="mr-3">Welcome James Miller!</span>
-        <button class="btn btn-outline-warning mr-sm-2">Sign Out</button>
+        <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
       </div>
   </nav>
   
