--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -21,13 +21,14 @@
           <label for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <select class="form-control form-control-lg mb-3 mt-4"  >
-            <option>Car Owner</option>
-            <option>Insurance Agent</option>
-            <option>Manufacturer</option>
-            <option>Police Officer</option>
+        <select class="form-control form-control-lg mb-3 mt-4" [(ngModel)]="selector" name="loginTypeSelector">
+            <option selected disabled>Select A Login Type</option>
+            <option value="1" >Car Owner</option>
+            <option value="2">Insurance Agent</option>
+            <option value="3">Manufacturer</option>
+            <option value="4">Police Officer</option>
           </select>
-        <button routerLink="/manufacturer" class="btn btn-primary">Sign In</button>
+        <button (click)="navigatePage(selector)" class="btn btn-primary">Sign In</button>
       </form>
 
       <div class="row justify-content-end">
