--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -70,11 +70,11 @@
       
 
       <div class="row justify-content-end">
-        <a class="col-lg-1 col-5" href="#">
+        <a class="col-lg-1 col-5" href="#" style="width: 67px!important;max-width: 67px!important;">
           <small>Terms</small>
         </a>
         <small class="mx-1"> | </small>
-        <a class="col-lg-1 col-5" href="#">
+        <a class="col-lg-1 col-5" href="#" style="width: 70px!important;max-width: 70px!important;">
           <small>Privacy</small>
         </a>
       </div>
