--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -13,17 +13,18 @@
       <h5 class="card-title mb-2 mt-5">All your vehicle registration needs in one place.</h5>
       <p class="card-text mb-4">Register your vehicle, update registrations, check and manage the status of your vehicles and find all the information
         and the forms you need.</p>
-      <a routerLink="/signup" class="btn btn-success btn-lg mb-5 mr-2">
+      <div  >
+      <a routerLink="/signup" class="btn btn-success btn-lg mb-5 mr-2" style="width: 151px!important;min-width: 151px!important;">
         <i class="fas fa-user-plus mr-2"></i>Sign Up</a>
-      <a routerLink="/login" class="btn btn-primary btn-lg mb-5">
+      <a routerLink="/login" class="btn btn-primary btn-lg mb-5" style="width: 151px!important;min-width: 151px!important;">
         <i class="fas fa-sign-in-alt mr-2"></i>Login</a>
-
+      </div>
       <div class="row justify-content-end">
-        <a class="col-lg-1 col-5" href="#">
+        <a class="col-lg-1 col-5" href="#" style="width: 67px!important;max-width: 67px!important;">
           <small>Terms</small>
         </a>
         <small class="mx-1"> | </small>
-        <a class="col-lg-1 col-5" href="#">
+        <a class="col-lg-1 col-5" href="#" style="width: 70px!important;max-width: 70px!important;">
           <small>Privacy</small>
         </a>
       </div>
