final changes of day for july 25

--- a/src/app/police-hub-report/police-hub-report.component.html
+++ b/src/app/police-hub-report/police-hub-report.component.html
@@ -1,3 +1,29 @@
-<p>
-  police-hub-report works!
-</p>
+<!-- Navbar -->
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <a routerLink="/" class="navbar-brand">
+    <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+  </a>
+  <button class="btn btn-outline-info mr-sm-2">Help</button>
+</nav>
+
+<!-- Container for page -->
+<div class="container">
+  <div class="card my-5 text-center">
+    <div class="card-body">
+      <h5 class="card-title mb-2 mt-5">Report a Vehicle Suspicious or Stolen</h5>
+      <!-- Form -->
+      
+
+      <div class="row justify-content-end">
+        <a class="col-lg-1 col-5" href="#" style="width: 67px!important;max-width: 67px!important;">
+          <small>Terms</small>
+        </a>
+        <small class="mx-1"> | </small>
+        <a class="col-lg-1 col-5" href="#" style="width: 70px!important;max-width: 70px!important;">
+          <small>Privacy</small>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div>
