--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -15,7 +15,7 @@
       <form class="w-75 mx-auto text-left">
         <div class="form-group">
           <label for="exampleInputEmail1">Email Address</label>
-          <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -24,9 +24,11 @@
         <select class="form-control form-control-lg mb-3 mt-4" [(ngModel)]="selector" name="loginTypeSelector">
             <option disabled value="undefined">Select A Login Type</option>
             <option value="1" >Car Owner</option>
-            <option value="2">Insurance Agent</option>
-            <option value="3">Manufacturer</option>
-            <option value="4">Police Officer</option>
+            <option value="2">Manufacturer</option>
+            <option value="3">Police Officer</option>
+            <option value="4" disabled>Insurance Agent</option>
+            <option value="5" disabled>Government Regulator</option>
+            <option value="6" disabled>Vehicle Standards Agency</option>
           </select>
         <button (click)="navigatePage(selector)" [disabled]="selector=='undefined'" class="btn btn-primary">Sign In</button>
       </form>
