manufacturer vehicle creation & specific vehicle view 4 carowners

--- a/src/app/car-owner-car-info/car-owner-car-info.component.html
+++ b/src/app/car-owner-car-info/car-owner-car-info.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-2">More details about your vehicle</h5>
+      <h5 class="card-title my-2">More details about your vehicle {{vehicleVIN}}</h5>
       <hr>
 
       <table class="table table-hover">
@@ -37,7 +37,7 @@
             </th>
             <th scope="col">Height
             </th>
-            <th scope="col">Lenght
+            <th scope="col">Length
             </th>
             <th scope="col">Width
             </th>
@@ -45,18 +45,18 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Chevy</td>
-            <td>Nova</td>
-            <td>BTRD 094</td>
-            <td>Blue</td>
+          <tr *ngIf="tableData!=undefined && tableData!=null">
+            <td>{{tableData.make}}</td>
+            <td>{{tableData.model}}</td>
+            <td>{{tableData.plate}}</td>
+            <td>{{tableData.colour}}</td>
             <td>534573</td>
-            <td>01/01/19</td>
-            <td>5</td>
-            <td>18kg</td>
-            <td>2m</td>
-            <td>8m</td>
-            <td>2.2m</td>
+            <td>{{tableData.insurance}}</td>
+            <td>{{tableData.numSeats}}</td>
+            <td>{{tableData.weight}}</td>
+            <td>{{tableData.height}}</td>
+            <td>{{tableData.length}}</td>
+            <td>{{tableData.width}}</td>
           </tr>
         </tbody>
       </table>
