--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="card my-5 text-center">
     <div class="card-body">
-      <h5 class="card-title mb-2 mt-5">All your vehicle registration needs in one place.</h5>
+      <h5 class="card-title mb-2 mt-5">All of your vehicle registration needs in one place.</h5>
       <p class="card-text mb-4">Register your vehicle, update registrations, check and manage the status of your vehicles and find all the information
         and the forms you need.</p>
       <div  >
