--- a/src/app/manufaturer-hub/manufaturer-hub.component.html
+++ b/src/app/manufaturer-hub/manufaturer-hub.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-5">Manufacturer options:</h5>
+      <h5 class="card-title my-5">Manufacturer Options</h5>
       <div class="row justify-content-center mb-5">
         <div class="col-lg-3 col-12 text-center">
           <button routerLink="/manufacturer/new-car" class="btn btn-outline-success btn-block" style="height: 80px;">New Vehicle Request
