--- a/src/app/car-owner-hub/car-owner-hub.component.html
+++ b/src/app/car-owner-hub/car-owner-hub.component.html
@@ -4,6 +4,7 @@
     <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
   </a>
   <div>
+    <!-- User Information Is Displayed Here -->
     <span class="mr-3">Welcome {{ownerName}}! [ID 1234]</span>
     <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
   </div>
@@ -16,6 +17,7 @@
       <h5 class="card-title my-2">Your Vehicles</h5>
       <hr>
 
+      <!-- Table Information Is Displayed Here. Data Is Fetched From The Business Network. -->
       <table class="table table-hover">
         <thead class="thead-light">
           <tr>
