--- a/src/app/police-hub-report/police-hub-report.component.html
+++ b/src/app/police-hub-report/police-hub-report.component.html
@@ -11,7 +11,46 @@
   <div class="card my-5 text-center">
     <div class="card-body">
       <h5 class="card-title mb-2 mt-5">Report a Vehicle Suspicious or Stolen</h5>
+
       <!-- Form -->
+      <form class="w-75 mx-auto text-left">
+          <div class="form-group">
+              <label for="exampleInputOwner1">Owner</label>
+              <input type="text" class="form-control form-control-lg" id="exampleInputOwner1" aria-describedby="ownerHelp" placeholder="Enter owner">
+            </div>
+          <div class="form-group">
+            <label for="exampleInputVIN1">VIN</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputMake1">Make</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputModel1">Model</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputLicense1">License</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate">
+          </div>
+  
+          <div class="form-group">
+            <label for="exampleInputColour1">Colour</label>
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour">
+          </div>
+          <div class="form-group">
+              <label for="exampleInputReason1">Reason for Reporting</label>
+              <textarea type="text" class="form-control form-control-lg" id="exampleInputReason1" aria-describedby="reasonHelp" placeholder="Enter the reason for reporting"></textarea>
+            </div>
+    
+            <div class="form-group">
+              <label for="exampleInputNotes1">Additional Notes</label>
+              <textarea type="text" class="form-control form-control-lg" id="exampleInputNotes1" aria-describedby="notesHelp" placeholder="Enter additional notes"></textarea>
+            </div>
+          <button routerLink="/car-owner" class="btn btn-primary">Submit</button>
+        </form>
+  
       
 
       <div class="row justify-content-end">
