--- a/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
+++ b/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
@@ -4,7 +4,7 @@
       <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
     </a>
     <div>
-      <span class="mr-3">Welcome Manufacturer!</span>
+      <span class="mr-3">Welcome {{manuName}}! [ID {{manuID}}]</span>
       <button routerLink="/" class="btn btn-outline-warning mr-sm-2">Sign Out</button>
     </div>
   </nav>
