--- a/src/app/police-hub/police-hub.component.html
+++ b/src/app/police-hub/police-hub.component.html
@@ -4,7 +4,7 @@
     <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
   </a>
   <div>
-    <span class="mr-3">Welcome Officer!</span>
+    <span class="mr-3">Welcome {{officerName}} [ID {{badgeID}}]!</span>
     <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
   </div>
 </nav>
