Police pages update.

--- a/src/app/police-hub-impound/police-hub-impound.component.html
+++ b/src/app/police-hub-impound/police-hub-impound.component.html
@@ -1,10 +1,13 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <a routerLink="/" class="navbar-brand">
-    <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
-  </a>
-  <button class="btn btn-outline-info mr-sm-2">Help</button>
-</nav>
+    <a routerLink="/" class="navbar-brand">
+      <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+    </a>
+    <div>
+      <span class="mr-3">Welcome Officer!</span>
+      <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
+    </div>
+  </nav>
 
 <!-- Container for page -->
 <div class="container">
