--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -13,31 +13,31 @@
   <div class="container">
     <div class="card my-5 text-center">
       <div class="card-body">
-        <h5 class="card-title mb-2 mt-5">Edit Details About Your Vehicle</h5>
+        <h5 class="card-title mb-2 mt-5">Edit Vehicle VIN#{{vinNumber}}</h5>
   
         <!-- Form -->
   
         <form class="w-75 mx-auto text-left">
           <div class="form-group">
             <label for="exampleInputVIN1">VIN</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" value="{{vehicleOwner}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" value="{{myVehicle.VIN}}">
           </div>
           <div class="form-group">
             <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make" value="{{vehicleMake}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle`s Make" value="{{myVehicle.make}}">
           </div>
           <div class="form-group">
             <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model" value="{{vehicleModel}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle`s model" value="{{myVehicle.model}}">
           </div>
           <div class="form-group">
             <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate" value="{{vehicleLicense}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle`s license plate" value="{{myVehicle.plate}}">
           </div>
   
           <div class="form-group">
             <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour" value="{{vehicleColour}}">
+            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle`s colour" value="{{myVehicle.colour}}">
           </div>
   
           <div class="form-group">
