--- a/src/app/car-owner-car-info/car-owner-car-info.component.html
+++ b/src/app/car-owner-car-info/car-owner-car-info.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-2">More details about your vehicle {{vehicleVIN}}</h5>
+      <h5 class="card-title my-2">Vehicle VIN#{{vehicleVIN}}</h5>
       <hr>
 
       <table class="table table-hover">
