--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -14,6 +14,7 @@
   <div class="card my-5 text-center">
     <div class="card-body">
       <h5 class="card-title mb-2 mt-5">Register a New Vehicle</h5>
+      <h6 class="card-title mb-2 mt-5">{{displayMessage}}</h6>
 
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
