--- a/src/app/car-owner-car-info/car-owner-car-info.component.html
+++ b/src/app/car-owner-car-info/car-owner-car-info.component.html
@@ -5,7 +5,7 @@
   </a>
   <div>
     <span class="mr-3">Welcome {{ownerName}}! [ID {{ownerID}}]</span>
-    <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
+    <button class="btn btn-outline-warning mr-sm-2" (click)="signOut()">Sign Out</button>
   </div>
 </nav>
 
