--- a/src/app/manufaturer-hub/manufaturer-hub.component.html
+++ b/src/app/manufaturer-hub/manufaturer-hub.component.html
@@ -5,7 +5,7 @@
     </a>
     <div>
       <span class="mr-3">Welcome {{manuName}}! [ID {{manuID}}]</span>
-      <button routerLink="/" class="btn btn-outline-warning mr-sm-2">Sign Out</button>
+      <button (click)="signOut()" class="btn btn-outline-warning mr-sm-2">Sign Out</button>
     </div>
   </nav>
 
